jwt auth setup, otp verification logic